--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar-default {
+    background-color: #f4f3ef;
+    border-bottom: 1px solid #DDDDDD;
+}
