Hiring process and notification

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
+    <notifier-container></notifier-container>
     <div class="wrapper"> 
 
                 <app-sidebar></app-sidebar>
-            
+                    
                 
                     <app-navbar></app-navbar>
             
