--- a/src/app/people/people.component.html
+++ b/src/app/people/people.component.html
@@ -32,9 +32,22 @@
                                                 <div class="progress-bar" role="progressbar" [ngStyle]="{'width.%': selectedPerson.skills[2].score}" aria-valuenow="selectedPerson.skills[1].score" aria-valuemin="0" aria-valuemax="100">Team worker</div>
                                         </div>
                                 </div>  
+
                                 <div class="row">
                                     <div class="container">
-                                        <button type="button" class="btn btn-outline-primary" (click)="toggleChart()">{{lableButton}}</button>
+                                        <form>
+                                            <div class="col-md-2">
+                                                <input type="number" class="form-control border-input"  placeholder="Place an offer" [(ngModel)]="offer" name="offer">
+                                            </div>
+                                            <div class="col-md-2">
+                                                <button type="button" class="btn btn-outline-success" (click)="placeOffer()">Place an offer</button>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <button type="button" class="btn btn-outline-primary" (click)="toggleChart()">{{lableButton}}</button>
+                                            </div>
+                                        </form>
+
+
                                     </div>
                                 </div>                              
                             </div>
@@ -61,7 +74,7 @@
                 </div>
 
                 <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-8">
                                 <div class="card card-plain">
                                     <div class="header">
                                         <h4 class="title">Presales People</h4>
