--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -129,6 +129,32 @@
                 </div>
 
                 <div class="col-md-6">
+                    <div class="card ">
+                        <div class="header">
+                            <h4 class="title">Report Settings</h4>
+                            <p class="category">All products including Taxes</p>
+                        </div>
+                        <div class="content">
+                            <div id="chartActivity" class="ct-chart"></div>
+
+                            <div class="footer">
+                                <div class="chart-legend">
+                                    <i class="fa fa-circle text-info"></i> Tesla Model S
+                                    <i class="fa fa-circle text-warning"></i> BMW 5 Series
+                                </div>
+                                <hr>
+                                <div class="stats">
+                                    <i class="ti-check"></i> Data information certified
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-md-6">
                     <div class="card">
                         <div class="header">
                             <h4 class="title">Team Members</h4>
@@ -165,53 +191,41 @@
                         </div>                        
                     </div>
                 </div>
-            </div>
-
-
-            <div class="row">
                 <div class="col-md-6">
                     <div class="card">
                         <div class="header">
-                            <h4 class="title">Email Statistics</h4>
-                            <p class="category">Last Campaign Performance</p>
+                            <h4 class="title">Proposal placed</h4>
                         </div>
                         <div class="content">
-                            <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div>
+                            <ul class="list-unstyled team-members">
+                                        <li *ngFor="let person of proposals">
+                                            <div class="row">
+                                                <div class="col-xs-3">
+                                                    <div class="avatar">
+                                                        <img src="assets/img/{{person.icon}}.png" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                                                    </div>
+                                                </div>
+                                                <div class="col-xs-6">
+                                                    {{person.name}}
+                                                    <br />
+                                                    <span class="text-success"><small>Satisfaction : {{person.satisfactionLevel}}</small></span>
+                                                </div>
 
-                            <div class="footer">
-                                <div class="chart-legend">
-                                    <i class="fa fa-circle text-info"></i> Open
-                                    <i class="fa fa-circle text-danger"></i> Bounce
-                                    <i class="fa fa-circle text-warning"></i> Unsubscribe
-                                </div>
-                                <hr>
-                                <div class="stats">
-                                    <i class="ti-timer"></i> Campaign sent 2 days ago
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card ">
-                        <div class="header">
-                            <h4 class="title">2015 Sales</h4>
-                            <p class="category">All products including Taxes</p>
-                        </div>
-                        <div class="content">
-                            <div id="chartActivity" class="ct-chart"></div>
+                                            </div>
+                                        </li>
 
-                            <div class="footer">
-                                <div class="chart-legend">
-                                    <i class="fa fa-circle text-info"></i> Tesla Model S
-                                    <i class="fa fa-circle text-warning"></i> BMW 5 Series
-                                </div>
-                                <hr>
-                                <div class="stats">
-                                    <i class="ti-check"></i> Data information certified
-                                </div>
-                            </div>
+                                    </ul>
                         </div>
+                        <div class="footer">
+                            <div class="container">
+                                    <hr />
+                                    <div class="stats">
+                                        <a routerLink="/people"><i class="ti-timer"></i> Hire People</a>
+                                    </div>
+                            </div>
+
+
+                        </div>                        
                     </div>
                 </div>
             </div>
