--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,13 +22,13 @@
                 </li>
                 <li routerLinkActive="active">
                     <a routerLink="market">
-                        <i class="ti-user"></i>
+                        <i class="ti-stats-up"></i>
                         <p>Market</p>
                     </a>
                 </li>
                 <li routerLinkActive="active">
                     <a routerLink="people">
-                        <i class="ti-view-list-alt"></i>
+                        <i class="ti-user"></i>
                         <p>People</p>
                     </a>
                 </li>
