--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                 <li>
                     <a (click)="toggleNotification()" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="ti-bell"></i>
-                            <p>Enable Notifications</p>
+                            <p>{{notificationLable[notificationLableIdx]}}</p>
                       </a>
                 </li>
     <li>
